--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,16 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+   <div class ="field">
+    <%=f.label :name%> <br>
+    <%= f.text_field :name, required: true, autofocus: true, autocomplete: "name"%>
+  </div>
+
+  <div class ="field">
+    <%=f.label :username%> <br>
+    <%= f.text_field :username, required: true, autocomplete: "username"%>
+  </div>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
