--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,27 @@
   </head>
 
   <body>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Home</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="float-right">
+       <%if user_signed_in?%>
+       <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-outline-primary'%>
+       <% else %>
+      <%= link_to 'Login', new_user_session_path, class: 'btn btn-outline-primary'%>
+      <%= link_to 'Signup', new_user_registration_path, class: 'btn btn-outline-primary'%>
+      <%end%>
+    </div>
+    
+  </div>
+</nav>
     <%= yield %>
   </body>
 </html>
