--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Post</h1>
 
-<%= render 'form', post: @post %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>Editing Post</h1>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+      <%= render 'form', post: @post %>
+      <%= link_to 'Cancel', posts_path, class: "btn btn-danger mt-4" %>
+    </div>
+  </div>
+</div>
