--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Post</h1>
 
-<%= render 'form', post: @post %>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>New Post</h1>
 
-<%= link_to 'Back', posts_path %>
+      <%= render 'form', post: @post %>
+
+      <%= link_to 'Cancel', posts_path, class: "btn btn-danger mt-4" %>
+    </div>
+  </div>
+</div>
