--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,22 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @post.user_id %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col">
+      <div class="jumbotron">
+        <h1 class="display-4"><%= @post.title %></h1>
+        <% if user_signed_in? %>
+          <h6 class="text-muted">Author: <%= @post.user.name %></h6>
+        <% end %>
+        <small class="text-muted">Posted: <%= time_ago_in_words(@post.created_at) %></small>
+        <p class="lead mt-3"><%= @post.body %></p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-6">
+      <%= link_to 'Back', posts_path, class: "btn btn-dark mb-4" %>
+    </div>
+    <div class="col-6 text-right">
+      <%= link_to 'Edit', edit_post_path(@post), class: "btn btn-info mb-4 float-right" %>
+    </div>
+  </div>
+</div>
